resolved slider image not fit to screen

--- a/app/sass/views/partials/_slider.scss
+++ b/app/sass/views/partials/_slider.scss
@@ -1,8 +1,6 @@
 #main_slider{
-  #slider_img{
-    img{
-      width: 100%;
-      height: auto;
-    }
+  img{
+    width: 100%;
+    height: auto;
   }
 }
